# tg_webhook

./: .gitignore  alembic.ini  pyproject.toml  wsgi.py
alembic/versions/: 86414a696119_create_message_table.py
app/: app.py  models.py  settings.py
app/api/v2/: __init__.py  echo.py  greet.py
app/blueprints/api/v2/: __init__.py  echo.py  time_track.py
app/blueprints/posts/: blueprint.py
app/blueprints/posts/templates/posts/: index.html
app/blueprints/tg/: blueprint.py
app/blueprints/tg/templates/tg/: detail.html  list.html
app/blueprints/timetrack/: blueprint.py
app/blueprints/timetrack/templates/timetrack/: index.html
app/blueprints/users/: blueprint.py
app/blueprints/users/templates/users/: create.html  delete.html  detail.html  list.html
app/templates/: base.html  index.html  script.js
bot/: main.py
