[project]
name = "tg-webhook"
version = "0.1.0"
description = ""
authors = [
    {name = "Automagician",email = "wellberg@list.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "environs (>=14.3.0,<15.0.0)",
    "flask-restx (>=1.3.0,<2.0.0)",
    "flask-login (>=0.6.3,<0.7.0)",
    "flask-cors (==3.0.10)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "arrow (>=1.3.0,<2.0.0)",
    "alembic (>=1.16.5,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
